--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "aws-typescript-wrapper",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "AWS Typescript Wrapper is a library that makes communication easier with AWS services using Javascript SDK.",
   "author": "Simsek Mert <simsek97@gmail.com>",
   "license": "MIT",
   "private": false,
-  "main": "src/index.ts",
+  "main": "src/main.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/simsek97/aws-typescript-wrapper.git"
   },
   "scripts": {
-    "build": "yarn build"
+    "typecheck": "tsc --project tsconfig.json --noEmit",
+    "lint": "npx eslint . --ext .ts"
   },
   "dependencies": {
     "@aws-sdk/client-appflow": "^3.186.0",
@@ -23,11 +24,16 @@
     "@aws-sdk/client-sfn": "^3.186.0",
     "@aws-sdk/client-sns": "^3.186.0",
     "@aws-sdk/client-sts": "^3.186.0",
+    "express": "^4.17.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/lodash": "^4.14.186",
     "@types/node": "^18.8.3",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "eslint": "^8.25.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
