--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,7 +46,10 @@ jobs:
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" >> .npmrc
 
       - name: Set up NPM registry
-        run: echo "registry=https://registry.npmjs.org/" >> .npmrc
+        run: echo "registry=https://www.npmjs.com/package/aws-typescript-wrapper" >> .npmrc
+
+      - name: Set up NPM auth
+        run: echo "always-auth=true" >> .npmrc
 
       - name: Create version
         run: git config --global user.email "simsek97@gmail.com" && git config --global user.name "Simsek Mert" && yarn version --patch
