--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,7 +43,7 @@ jobs:
           registry-url: "https://registry.npmjs.org/"
 
       - name: Set up NPM authentication
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" >> .npmrc
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NMP_AUTH_TOKEN }}" >> .npmrc
 
       - name: Set up NPM registry
         run: echo "registry=https://www.npmjs.com/package/aws-typescript-wrapper" >> .npmrc
