--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -43,7 +43,7 @@ jobs:
           registry-url: "https://registry.npmjs.org/"
 
       - name: Set up NPM authentication
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NMP_AUTH_TOKEN }}" >> .npmrc
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" >> .npmrc
 
       - name: Set up NPM registry
         run: echo "registry=https://www.npmjs.com/package/aws-typescript-wrapper" >> .npmrc
@@ -61,7 +61,8 @@ jobs:
       - name: Create Release
         uses: ncipollo/release-action@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          # GITHUB_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
         with:
           tag: ${{ steps.tag-version.outputs.LATEST_TAG }}
           name: Release ${{ steps.tag-version.outputs.LATEST_TAG }}
