--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,4 +59,4 @@ jobs:
         run: echo "::set-output name=LATEST_TAG::$(git describe --abbrev=0 --tags)"
 
       - name: Publish
-        run: npm login && npm publish
+        run: npm publish
