--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^8.25.0",
     "jest": "^29.2.1",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
