--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "types": ["node", "jest"],
+    "types": ["node"],
     "sourceMap": true,
     "outDir": "./dist/",
     "esModuleInterop": true,
