--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
+  "bugs": {
+    "url": "https://github.com/simsek97/aws-typescript-wrapper/issues"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "postinstall": "yarn build",
