--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postinstall": "yarn build",
     "postversion": "git push --tags && yarn publish . --tag $npm_package_version && git push && echo \"Successfully released version $npm_package_version!\"",
     "test": "jest",
+    "format": "prettier --write \"src/**/*.ts\"",
     "lint": "npx eslint . --ext .ts",
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
@@ -47,6 +48,7 @@
     "eslint": "^8.25.0",
     "jest": "^29.2.1",
     "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
