--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "tsconfig.build.json"
   ],
   "bugs": {
     "url": "https://github.com/simsek97/aws-typescript-wrapper/issues"
