--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,4 +19,5 @@
     "skipLibCheck": true
   },
   "include": ["src"],
+  "exclude": ["node_modules", "**/*.test.*", "**/__mocks__/*", "**/__tests__/*"]
 }
