--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "url": "https://github.com/simsek97/aws-typescript-wrapper/issues"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.json",
     "postinstall": "yarn build",
     "postversion": "git push --tags && yarn publish . --tag $npm_package_version && git push",
     "test": "jest",
