--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
     "registry": "https://registry.npmjs.org/"
   },
   "files": [
-    "dist/**/*",
-    "tsconfig.build.json"
+    "dist/**/*"
   ],
   "bugs": {
     "url": "https://github.com/simsek97/aws-typescript-wrapper/issues"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "postinstall": "yarn build",
     "postversion": "git push --tags && yarn publish . --tag $npm_package_version && git push",
     "test": "jest",
     "format": "prettier --write \"src/**/*.ts\"",
