--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Simsek Mert <simsek97@gmail.com>",
   "license": "MIT",
   "private": false,
-  "main": "src/index.js",
-  "types": "src/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/simsek97/aws-typescript-wrapper.git"
