--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "CommonJS",
+    "lib": ["DOM"],
+    "module": "ES6",
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
@@ -14,8 +15,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "ES2022",
-    "types": ["node"],
+    "target": "ES6",
     "useUnknownInCatchVariables": true,
   },
   "include": ["src/**/*"],
