--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "forceConsistentCasingInFileNames": true,
     "lib": ["DOM"],
     "module": "ES6",
+    "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
@@ -14,7 +15,6 @@
     "outDir": "lib",
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true,
     "target": "ES6",
     "useUnknownInCatchVariables": true,
   },
