--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["DOM"],
+    "lib": ["DOM", "ES6"],
     "module": "ES6",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
