--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "useUnknownInCatchVariables": true,
   },
   "include": ["src"],
-  "exclude": ["node_modules", "**/*.test.*", "**/__mocks__/*", "**/__tests__/*"]
+  "exclude": ["node_modules"]
 }
