--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "target": "ES6",
     "useUnknownInCatchVariables": true,
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
