--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Simsek Mert <simsek97@gmail.com>",
   "license": "MIT",
   "private": false,
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/simsek97/aws-typescript-wrapper.git"
@@ -14,6 +14,9 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
+  "files": [
+    "dist"
+  ],
   "bugs": {
     "url": "https://github.com/simsek97/aws-typescript-wrapper/issues"
   },
