--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,14 +14,13 @@
     ],
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "outDir": "lib",
+    "outDir": "dist",
     "skipLibCheck": true,
     "sourceMap": true,
     "target": "ES6",
@@ -29,7 +28,6 @@
   },
   "exclude": [
     "node_modules",
-    "lib",
   ],
   "include": [
     "**/*.ts",
