--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@aws-sdk/client-appflow": "^3.186.0",
     "@aws-sdk/client-cloudformation": "^3.186.0",
     "@aws-sdk/client-cloudwatch": "^3.186.0",
+    "@aws-sdk/client-dynamodb": "^3.226.0",
     "@aws-sdk/client-iam": "^3.186.0",
     "@aws-sdk/client-s3": "^3.186.0",
     "@aws-sdk/client-secrets-manager": "^3.186.0",
     "@aws-sdk/client-sfn": "^3.186.0",
     "@aws-sdk/client-sns": "^3.186.0",
     "@aws-sdk/client-sts": "^3.186.0",
+    "@aws-sdk/util-dynamodb": "^3.226.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21"
   },
